tests/reject/enum_key_payload.ty
# An enum with a payload-carrying variant cannot key a map: two values with
# equal tags are not equal values. Must be a type error.
enum Shape:
    Dot
    Circle(int)

fn main():
    m : [Shape: int] = []
    m[Dot] = 1
    println(str(len(m)))
